CHANGELOG

When		Who		What
======================================================================================
2018-10-13      Richard Forth   Closes Issue #245
				Skip OS Version Check option, see --help.
2018-10-13      Richard Forth   Closes Issue #221
				Log Uptime in /var/log/apache2buddy.log
2018-10-13      Richard Forth   Closes Issue #251 
				Warn if vhost_count exceeds maxclients
2018-10-12      Richard Forth   Closes Issue #273 Graceful catch of syntax
				error in httpd.conf when parsing config.
2018-10-12      Richard Forth   Closes Issue #252 Add verbiage about Apache
				2.2 EOL. Refer to https://httpd.apache.org/.
2018-10-12      Richard Forth   Closes Issue #255 Ignore large gzipped files.
2018-10-12      Richard Forth   Closes Issue #268 Additional verbiage about
				maxclients/maxrequestworkers being hit only
				once per lifetime.

				For more information see: 
				https://github.com/apache/httpd/blob/0b61edca6cdda2737aa1d84a4526c5f9d2e23a8c/server/mpm/prefork/prefork.c#L809
2018-10-12      Richard Forth   Closes Issue #241 --no-check-pid causes perl
				error. 
2018-09-26      Andriy Fetsyuk  Merged a change to support more environments. 
2018-08-30      Richard Forth   Issue #259 fix fpm support for ubuntu systems. 
2018-08-28      Richard Forth   Issue #259 add support for ubuntu 18.04 
2018-05-11      Richard Forth   Issue #253 need to specify a pid to bypass the 
				'Multple PIDS listeing on port 80' error.
2018-02-10      Richard Forth   Addressed a concern over plesk vhosts counting
                                now ommiting domains containing:
				     - lists
				     - default
				     - webmail
				from the count.
2017-12-05	Richard Forth   Closes #231 Respect ServerLimit.
2017-11-01	Richard Forth   Closes #229 Removed easter egg, causing problems.
2017-10-13	Richard Forth   Closes #223 Added an easter egg.
				To trigger it, set maxclients /
				maxrequestworkers to 5 or less.